--- a/static/css/dashboard/purchase.css
+++ b/static/css/dashboard/purchase.css
@@ -40,7 +40,7 @@
 
 .dashboard-purchase .mileage-input {
     width: 175px;
-    height: 30px;
+    height: auto;
     position: relative;
     margin-top: 4px;
     float: left;
@@ -62,7 +62,7 @@
 
 .dashboard-purchase .mileage-input input {
     padding: 7px 5px 5px 5px;
-    width: 110px;
+    width: 105px;
     color: #648efc;
     font-size: 14px;
     font-weight: 600;
@@ -91,7 +91,7 @@
 
 .dashboard-purchase .point-input {
     width: 175px;
-    height: 30px;
+    height: auto;
     position: relative;
     margin-top: 4px;
     float: left;
@@ -113,7 +113,7 @@
 
 .dashboard-purchase .point-input input {
     padding: 7px 5px 5px 5px;
-    width: 110px;
+    width: 105px;
     color: #648efc;
     font-size: 14px;
     font-weight: 600;
@@ -157,7 +157,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .dashboard-purchase .pay .pay-option label:nth-child(1) {
-    width:19%;
+    width:18%;
 }
 
 .dashboard-purchase .pay .pay-option label:nth-child(2) {
@@ -165,7 +165,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .dashboard-purchase .pay .pay-option label:nth-child(3) {
-    width:27%;
+    width:29%;
 }
 
 .dashboard-purchase .pay .pay-option label:nth-child(4) {
@@ -225,7 +225,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .dashboard-purchase .item .item-info {
-    width: 285px;
+    width: 280px;
     margin-left: 30px;
     display: inline-block;
     vertical-align: top;
@@ -249,6 +249,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .dashboard-purchase .item .item-price {
+    float:right;
     display: inline-block;
     vertical-align: top;
 }
