category product_created, product_price fix the seller_info part (issue #229)

--- a/templates/category.html
+++ b/templates/category.html
@@ -423,14 +423,16 @@
                                     <div class="card-author">
                                         <div class="card-author-info">
                                             <img src="{{ product.seller.user.get_avatar }}" >
-                                            <span>{{ product.seller.user.get_short_name }}</span>
                                         </div>
-                                        <div class="card-author-info-rating" data-rating="{{ product.rating }}">
-                                            <i class="fa fa-star" aria-hidden="true"></i>
-                                            <i class="fa fa-star" aria-hidden="true"></i>
-                                            <i class="fa fa-star" aria-hidden="true"></i>
-                                            <i class="fa fa-star" aria-hidden="true"></i>
-                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                        <div class="card-author-info-seller-rating">
+                                            <div class="card-author-info-seller">{{ product.seller.user.get_short_name }}</div>
+                                            <div class="card-author-info-rating" data-rating="{{ product.rating }}">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
