--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -19,13 +19,14 @@
 
 .detail_content_wrapper_top{
     width:100%;
-    height:33%;
+    height:auto;
 }
 
 .detail_content_wrapper_top .detail_content_top_left{
     display: inline-block;
     width:40%;
     height:100%;
+    vertical-align: top;
 }
 
 .detail_content_wrapper_top .detail_content_top_left .seller_image{
@@ -72,9 +73,8 @@
 
 /* detail_content_top_right part */
 .detail_content_wrapper_top .detail_content_top_right {
-    display: block;
-    float:right;
-    width:60%;
+    display: inline-block;
+    width:58%;
     height:100%;
 }
 
@@ -84,7 +84,6 @@
     width:100%;
     height:50%;
     background-color: white;
-    margin-top:5%;
 }
 
 .detail_content_wrapper_top .detail_content_top_right .seller_info .seller_basic_info {
@@ -98,6 +97,8 @@
     display: block;
     margin-left:5%;
     font-size:13px;
+    margin-right:5%;
+    margin-bottom:5%;
 }
 
 .detail_content_wrapper_top .detail_content_top_right .seller_category {
@@ -137,18 +138,21 @@
 
 .detail_content_wrapper_mid{
     width:100%;
-    height:33%;
-    margin-bottom: 90px;
+    height:auto;
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
 .detail_content_wrapper_mid .detail_content_mid_left{
     display: inline-block;
     width:40%;
     height:100%;
+    vertical-align: top;
+    margin-top: 80px;
 }
 
 .detail_content_wrapper_mid .detail_content_mid_left .seller-rating{
-    margin:20%;
+    /*margin:20%;*/
     text-align: center;
 }
 
@@ -168,9 +172,8 @@
 }
 
 .detail_content_wrapper_mid .detail_content_mid_right{
-    display: block;
-    float:right;
-    width:60%;
+    display: inline-block;
+    width:58%;
     height:100%;
 }
 
