--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -181,6 +181,9 @@
             {% else %}
                 <div class="no-list">
                     등록한 서비스가 없습니다. 서비스를 등록해주세요!
+                    <br>
+                    <br>
+                    <a href="{% url 'product_upload' %}" class="dashboard-register-seller-button">상품 등록</a>
                 </div>
             {% endif %}
         </div>
