--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -440,30 +440,56 @@
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
-                                <span>({{ reviews_count }})</span>
+                                <div class="total-rating-text">
+                                    <span style="font-size: 20px;">{{ product.rating }}/5</span>
+                                    <span>({{ reviews_count }}개)</span>
+                                </div>
                             </div>
-                            <div class="graph-part">
+                            <div class="graph_wrapper">
+                                <div class="graph-part contents">
                                 콘텐츠
-                                <div class="stacked-bar-graph">
-                                  <span style="width:20%" class="bar-1"></span>
-                                  <span style="width:20%" class="bar-2"></span>
-                                  <span style="width:10%" class="bar-3"></span>
+                                  <div class="stacked-bar-graph">
+                                      <span style="width:40%" class="bar-1"></span>
+                                      <span style="width:40%" class="bar-2"></span>
+                                      <span style="width:20%" class="bar-3"></span>
+                                  </div>
+                                    <div class="graph-text">
+                                        <ul>
+                                            <li>만족 (0%)</li><!--
+                                            --><li>보통 (0%)</li><!--
+                                            --><li>불만족 (0%)</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="graph-part">
-                                광고효과
-                                <div class="stacked-bar-graph">
-                                  <span style="width:17%" class="bar-1"></span>
-                                  <span style="width:23%" class="bar-2"></span>
-                                  <span style="width:10%" class="bar-3"></span>
+                                <div class="graph-part ads">
+                                    광고효과
+                                    <div class="stacked-bar-graph">
+                                      <span style="width:34%" class="bar-1"></span>
+                                      <span style="width:46%" class="bar-2"></span>
+                                      <span style="width:20%" class="bar-3"></span>
+                                    </div>
+                                    <div class="graph-text">
+                                        <ul>
+                                            <li>만족 (0%)</li><!--
+                                            --><li>보통 (0%)</li><!--
+                                            --><li>불만족 (0%)</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="graph-part">
-                                친절도
-                                <div class="stacked-bar-graph">
-                                  <span style="width:17%" class="bar-1"></span>
-                                  <span style="width:20%" class="bar-2"></span>
-                                  <span style="width:13%" class="bar-3"></span>
+                                <div class="graph-part kindness">
+                                    친절도
+                                    <div class="stacked-bar-graph">
+                                      <span style="width:34%" class="bar-1"></span>
+                                      <span style="width:40%" class="bar-2"></span>
+                                      <span style="width:26%" class="bar-3"></span>
+                                    </div>
+                                    <div class="graph-text">
+                                        <ul>
+                                            <li>만족 (0%)</li><!--
+                                            --><li>보통 (0%)</li><!--
+                                            --><li>불만족 (0%)</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             {% if reviews %}
