fix conversation with buyer btn in product/order (issue #239)

--- a/static/css/dashboard/seller/order.css
+++ b/static/css/dashboard/seller/order.css
@@ -658,6 +658,7 @@
 
 .item-list .table_product_btn.change button{
     background: none;
+    font-size: 10px;
 }
 
 .item-list .table_product_btn.change input{
