change main banner (issue #255)

--- a/templates/home.html
+++ b/templates/home.html
@@ -113,7 +113,7 @@
 {% block jumbotron %}
     <div class="new_jumbotron">
         <div class="jumbotron_left">
-            <a href='/dashboard/guide/'><div class="owl-slide banner-0" style='background-image: url("{% static 'img/ver1.5/banner_00.png' %}");'></div></a>
+            <a href='/dashboard/guide/'><div class="owl-slide banner-0" style='background-image: url("{% static 'img/ver1.5/banner_00.jpg' %}");'></div></a>
             <a href='/category/all?tag=pet'><div class="owl-slide banner-1" style='background-image: url("{% static 'img/ver1.5/banner_01.png' %}");'></div></a>
             <a href='/category/all?tag=travel'><div class="owl-slide banner-2" style='background-image: url("{% static 'img/ver1.5/banner_02.png' %}");'></div></a>
             <a href='/category/all?tag=food'><div class="owl-slide banner-3" style='background-image: url("{% static 'img/ver1.5/banner_03.png' %}");'></div></a>
