add youtube part, change naver logo with blog logo (issue #264)

--- a/templates/header.html
+++ b/templates/header.html
@@ -80,8 +80,8 @@
             </a>
         </li>
         <li>
-            <a href="{% url 'category' 'kakaostory' %}">
-                카카오스토리
+            <a href="{% url 'category' 'youtube' %}">
+                유투브
             </a>
         </li>
     </ul>
