--- a/templates/product/product_edit.html
+++ b/templates/product/product_edit.html
@@ -68,7 +68,7 @@
                         color_unchecked_sex();
                         color_checked_sex();
                     }
-                }else if(json_selected_product["sns_type"]=='kakaostory'){
+                }else if(json_selected_product["sns_type"]=='youtube'){
                     $('#id_sns_type_3').prop('checked',true);
                     color_unchecked_sns_type();
                     color_checked_sns_type();
