product registration -> service registration (issue #267)

--- a/templates/account/dashboard_sidebar.html
+++ b/templates/account/dashboard_sidebar.html
@@ -62,7 +62,7 @@
         </div>
         <div class="side-menu-content">
             <ul>
-                <li><a href="{% url 'product_upload' %}">- 상품등록</a></li>
+                <li><a href="{% url 'product_upload' %}">- 서비스 등록</a></li>
                 <li><a href="{% url 'product_manage' %}">- 상품관리</a></li>
                 <li><a href="{% url 'product_order_manage' %}">- 판매관리</a></li>
                 <li><a href="{% url 'product_profit_manage' %}">- 수익관리</a></li>
