--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -174,13 +174,13 @@
                             <div class="seller-detail-info-each top">
                                 <div class="seller-info-rating seller-rating">
                                     <span class="seller-rating-title">판매자 평가</span>
-                                    <div class="seller-rating" data-rating="{{ product.rating }}">
+                                    <div class="seller-rating" data-rating="{{ product.seller.rating }}">
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
-                                        <span class="">{{ product.rating }}/5</span>
+                                        <span class="rating-num">{{ product.seller.rating }}/5</span>
                                         <span class="">({{ seller_review_count }}개)</span>
                                     </div>
                                 </div>
